# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml
.sqlx/: query-993d6dbe4acbb4e719cff24fcb48f81b52abf2e0a74b55838b02634001b2c988.json
configuration/: base.yaml  production.yaml
migrations/: 20250510115604_create_subscriptions_tokens_table.sql
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
