[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
config = "0.15.11"
uuid = { version = "1.16.0", features = ["v4"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
claims = "0.8.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
validator = "0.20.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
tracing-actix-web = "0.7.18"
log = "0.4.27"
env_logger = "0.11.8"
wiremock = "0.6.3"

[dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.8.5"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
fake = "4.3.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.9.1"
tokio = { version = "1.44.2", features = ["rt", "macros"] }
serde_json = "1.0.140"
